--- a/src/OcsaBreadcrumb.css
+++ b/src/OcsaBreadcrumb.css
@@ -1,6 +1,7 @@
 :root {
   --breadcrumb-color: red;
   --breadcrumb-content: "→";
+  --breadcrumb-link-color: blue;
 }
 
 .breadcrumb {
@@ -14,6 +15,11 @@
   margin: 0;
   padding: 0;
   align-items: end;
+}
+
+.breadcrumb .link {
+  color: var(--breadcrumb-link-color);
+  cursor: pointer;
 }
 
 .breadcrumb li:not(:last-child)::after {
